<resources>
    <string name="app_name">Lens</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="tap_button_to_capture_and_start_extracting_text">Tap Button to capture and start extracting text</string>
    <string name="gallery">Gallery</string>
    <string name="result">Result</string>
    <string name="processing_image">Processing Image</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>

    <string name="test_interstitial">ca-app-pub-3940256099942544/5354046379</string>

    <string name="banner_ad_id">ca-app-pub-4072395437556231/2488973831</string>
    <string name="interstitial_ad_id">ca-app-pub-4072395437556231/6928564683</string>
    <string name="rewarded_interstitial_ad_id">ca-app-pub-4072395437556231/4797178254</string>
    <string name="info">Info</string>
    <string name="developed_and_designed_by">Developed and designed by</string>
    <string name="jordan_mungujakisa">Jordan Mungujakisa</string>
    <string name="connect_on_twitter">Connect on twitter</string>
    <string name="connect_on_linkedin">Connect on linkedin</string>
    <string name="connect_on_github">Connect on github</string>
    <string name="send_me_an_email">Send me an email</string>
    <string name="support">Support</string>
    <string name="changelog">Changelog</string>
    <string name="donate">Donate</string>
    <string name="feedback">Feedback</string>
</resources>